--- a/index.html
+++ b/index.html
@@ -4,48 +4,111 @@
 <head>
   <meta charset="utf-8">
   <title>❤Karlinha❤</title>
+<link rel="stylesheet" href="css/styles.css">
+<link rel="icon" href="images/favicon.ico">
 </head>
 
-<body style="background-image:url(images/fundo2)">
-
-  <table>
+<body>
+<div class="">
+  <center>
+  <table class="benzinho">
     <tr>
-      <td>  <img src="images/dogg1.jpg" width="200" height="200" alt="dog-with-heats"></td>
-      <td>  <h1><font color="red">❧</font>Meu💑benzinho<font color="red">☙</font></h1>
-        <p>A Karlinha é <em>a coisinha mais linda q eu <strong>amo muito.</strong></em></p></td>
-        <td><img src="images/original.jpg" width="200" height="200" alt=""></td>
+      <td> <img src="images/dogg1.jpg" width="200" height="200" alt="dog-with-heats"></td>
+      <td>
+        <h1>
+          <font color="#ce0f3d">❧</font>Meu💑benzinho<font color="#ce0f3d">☙</font>
+        </h1>
+        <p><em>A coisinha mais linda q eu <strong>amo muito.</strong></em></p>
+
+      </td>
+      <td><img src="images/original.jpg" width="200" height="200" alt=""></td>
+
     </tr>
   </table>
+  </center>
+  <br>
 
-  <hr size=3 noshade>
-  <table cellspacing="50"><tr><td>
-  <h2><font color="red">Ela ama muito</font></h2>
-  <ul>
-    <li><strong>Gatos</strong>😻</li>
-    <ul><li>matilda</li><li>o outro la</li></ul>
-    <li><strong>Psicanálise</strong></li>
-    <li><strong>Café</strong></li>
-    <li><strong>Plantas☘</strong></li>
-    <li><strong>Cabelos</strong></li><ul><li>com quantidades exageradas de condicionador</li></ul>
-    <li><strong>Creme para pele</strong></li><ul><li>em quantidades duvidosas</li></ul>
-    <li><strong>Aquário cheio de peixinhos</strong>🐠</li><ul><li>pra ver eles se matando, mas isso é entre ela e a psicologa dela😱</li></ul>
-    <li><strong>Academia</strong></li><ul><li>pra ela poder nao ir</li></ul>
-    <li><strong>Dormir</strong></li><ul><li>pra ser acordada as 7 da manha</li></ul>
-    <li><strong>Acordar no meio da chuva pra gritar q o carro ta boiando</strong></li><ul><li>ainda to bolado com isso</li></ul>
-    <li><strong>Ser buscada no trabalho</strong>🚗</li><ul><li>maria gasolina do krl</li></ul>
-  </ul> </td>
-<td>
-<h1></h1>
-<p></p>
-</td>
-</tr></table>
-  <h1><p>Se nao acredita quando digo q ela é linda dms  <a href="page2.html">veja por voce mesmo.</a></p></h1>
-<p>Bonus dog mais a baixo👇</p>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+</div>
+<br>  <hr size=3 noshade><br>
+
+  <table cellspacing="30" class="meio">
+    <tr>
+      <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud1">
+      <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud2">
+        <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud3">
+        <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud4">
+            <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud5">
+            <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud6">
+      <td>
+
+        <h2>
+
+          <font color="#ce0f3d">Ela ama muito</font>
+        </h2>
+        <ul>
+          <font color="4d4646"><li><strong>Gatos</strong>😻</li>
+          <ul>
+            <li>matilda</li>
+            <li>o outro la</li>
+      </ul>
+         <li><strong>Psicanálise</strong></li>
+        <li><strong>Café</strong></li>
+
+        <li><strong>Plantas☘</strong></li>
+          <li><strong>Cabelos</strong></li>
+          <ul>
+            <li>com quantidades exageradas de condicionador</li>
+          </ul>
+          <li><strong>Creme para pele</strong></li>
+          <ul>
+            <li>em quantidades duvidosas</li>
+
+          </ul>
+          <li><strong>Aquário cheio de peixinhos</strong>🐠</li>
+          <ul>
+            <li>pra ver eles se matando, mas isso é entre ela e a psicologa dela😱</li>
+          </ul>
+          <li><strong>Academia</strong></li>
+          <ul>
+            <li>pra ela poder nao ir</li>
+          </ul>
+          <li><strong>Dormir</strong></li>
+          <ul>
+            <li>pra ser acordada as 7 da manha</li>
+          </ul>
+          <li><strong>Acordar no meio da chuva pra gritar q o carro ta boiando</strong></li>
+          <ul>
+
+            <li>ainda to bolado com isso</li>
+          </ul>
+          <li><strong>Ser buscada no trabalho</strong>🚗</li>
+          <ul>
+            <li>maria gasolina do krl</li>
+            </font>
+          </ul>
+        </ul>
+      </td>
+      <td>
+        <h1></h1>
+        <p></p>
+      </td>
+    </tr>
+  </table>
+      <img src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountainpng">
+  <h2>
+    <p>Se nao acredita quando digo q ela é linda dms <a href="page2.html">veja por voce mesmo.</a></p>
+  </h2>
+  <p>Bonus dog mais a baixo👇</p>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 <table cellspacing="450">
-  <tr><td>
-<img src="images/chapelzinho2.jpg" width="550" height="400" style="transform:rotate(90deg);">
-</td></tr></table>
+  <tr>
+    <td>
+      <img src="images/chapelzinho2.jpg" width="550" height="400" style="transform:rotate(90deg);">
+    </td>
+  </tr>
+</table>
+
 </html>
