--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-<div class="">
+<div>
   <center>
-  <table class="benzinho">
+  <table class="titulo-central">
     <tr>
       <td> <img src="images/dogg1.jpg" width="200" height="200" alt="dog-with-heats"></td>
       <td>
@@ -103,10 +103,10 @@
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
-<table cellspacing="450">
+<table>
   <tr>
     <td>
-      <img src="images/chapelzinho2.jpg" width="550" height="400" style="transform:rotate(90deg);">
+      <img src="images/chapelzinho2.jpg" width="550" height="400" style="transform:rotate(90deg);" class="flora">
     </td>
   </tr>
 </table>
