--- a/index.html
+++ b/index.html
@@ -3,43 +3,57 @@
 
 <head>
   <meta charset="utf-8">
-  <title>❤Karlinha❤</title>
-<link rel="stylesheet" href="css/styles.css">
-<link rel="icon" href="images/favicon.ico">
+  <title>❤31/03❤</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
+
 </head>
 
+
 <body>
-<div>
+  <div class="Cabeçario">
+    <center>
+      <table class="titulo-central">
+        <tr>
+          <td> <img src="images/dogg1.jpg" width="200" height="200" alt="dog-with-heats"></td>
+          <td>
+            <h1>
+              <font color="#ce0f3d">❧</font>Meu💑Mel<font color="#ce0f3d">☙</font>
+            </h1>
+            <center>
+              <p><em>A coisinha mais linda q eu <strong>amo muito.</strong></em></p>
+            </center>
+            <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
+          </td>
+          <td><img src="images/original.jpg" width="200" height="200" alt=""></td>
+
+        </tr>
+      </table>
+    </center>
+    <br>
+
+
+  </div>
+  <br>
+  <hr size=3 noshade><br><br>
   <center>
-  <table class="titulo-central">
-    <tr>
-      <td> <img src="images/dogg1.jpg" width="200" height="200" alt="dog-with-heats"></td>
-      <td>
-        <h1>
-          <font color="#ce0f3d">❧</font>Meu💑benzinho<font color="#ce0f3d">☙</font>
-        </h1>
-        <p><em>A coisinha mais linda q eu <strong>amo muito.</strong></em></p>
+    <font Color="cc0e74">
+      <h1>31/03</h1>
+    </font>
 
-      </td>
-      <td><img src="images/original.jpg" width="200" height="200" alt=""></td>
-
-    </tr>
-  </table>
+    <img src="https://media0.giphy.com/media/SRO0ZwmImic0/giphy.gif?cid=790b761190a05cfb0ac93c0edbb9580526775cd96446915f&rid=giphy.gif" alt="gatogif" class="Gatos">
+  
   </center>
   <br>
-
-
-</div>
-<br>  <hr size=3 noshade><br>
-
+  <hr size=3 noshade><br><br>
   <table cellspacing="30" class="meio">
     <tr>
       <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud1">
       <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud2">
-        <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud3">
-        <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud4">
-            <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud5">
-            <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud6">
+      <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud3">
+      <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud4">
+      <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud5">
+      <img src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloudpng" class="cloud6">
       <td>
 
         <h2>
@@ -47,46 +61,47 @@
           <font color="#ce0f3d">Ela ama muito</font>
         </h2>
         <ul>
-          <font color="4d4646"><li><strong>Gatos</strong>😻</li>
-          <ul>
-            <li>matilda</li>
-            <li>o outro la</li>
-      </ul>
-         <li><strong>Psicanálise</strong></li>
-        <li><strong>Café</strong></li>
+          <font color="4d4646">
+            <li><strong>Gatos</strong>😻</li>
+            <ul>
+              <li>matilda</li>
+              <li>o outro la</li>
+            </ul>
+            <li><strong>Psicanálise</strong></li>
+            <li><strong>Café</strong></li>
 
-        <li><strong>Plantas☘</strong></li>
-          <li><strong>Cabelos</strong></li>
-          <ul>
-            <li>com quantidades exageradas de condicionador</li>
-          </ul>
-          <li><strong>Creme para pele</strong></li>
-          <ul>
-            <li>em quantidades duvidosas</li>
+            <li><strong>Plantas☘</strong></li>
+            <li><strong>Cabelos</strong></li>
+            <ul>
+              <li>com quantidades exageradas de condicionador</li>
+            </ul>
+            <li><strong>Creme para pele</strong></li>
+            <ul>
+              <li>em quantidades duvidosas</li>
 
-          </ul>
-          <li><strong>Aquário cheio de peixinhos</strong>🐠</li>
-          <ul>
-            <li>pra ver eles se matando, mas isso é entre ela e a psicologa dela😱</li>
-          </ul>
-          <li><strong>Academia</strong></li>
-          <ul>
-            <li>pra ela poder nao ir</li>
-          </ul>
-          <li><strong>Dormir</strong></li>
-          <ul>
-            <li>pra ser acordada as 7 da manha</li>
-          </ul>
-          <li><strong>Acordar no meio da chuva pra gritar q o carro ta boiando</strong></li>
-          <ul>
+            </ul>
+            <li><strong>Aquário cheio de peixinhos</strong>🐠</li>
+            <ul>
+              <li>pra ver eles se matando, mas isso é entre ela e a psicologa dela😱</li>
+            </ul>
+            <li><strong>Academia</strong></li>
+            <ul>
+              <li>pra ela poder nao ir</li>
+            </ul>
+            <li><strong>Dormir</strong></li>
+            <ul>
+              <li>pra ser acordada as 7 da manha</li>
+            </ul>
+            <li><strong>Acordar no meio da chuva pra gritar q o carro ta boiando</strong></li>
+            <ul>
 
-            <li>ainda to bolado com isso</li>
-          </ul>
-          <li><strong>Ser buscada no trabalho</strong>🚗</li>
-          <ul>
-            <li>maria gasolina do krl</li>
-            </font>
-          </ul>
+              <li>ainda to bolado com isso</li>
+            </ul>
+            <li><strong>Ser buscada no trabalho</strong>🚗</li>
+            <ul>
+              <li>maria gasolina do krl</li>
+          </font>
+        </ul>
         </ul>
       </td>
       <td>
@@ -95,20 +110,39 @@
       </td>
     </tr>
   </table>
-      <img src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountainpng">
-  <h2>
-    <p>Se nao acredita quando digo q ela é linda dms <a href="page2.html">veja por voce mesmo.</a></p>
-  </h2>
-  <p>Bonus dog mais a baixo👇</p>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <img src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountainpng" class="montain">
+  <br><br><br>
+  <hr size=3 noshade><br>
+  </div>
+  <div class="fundo1"><br><br><br><br><br><br></div>
+  <div class="fundo2"><br><br><br><br><br><br><br><br></div>
+  <div class="fundo3"><br><br><br><br><br><br><br><br>
+    <br><br></div>
+  <div class="fundo4">
+    <img src="https://media2.giphy.com/media/3oEjHYq7NAd3bmUOrK/giphy.webp?cid=790b76116fd22cb8e986e80840a85390a1874a381da15039&rid=giphy.webp" alt="" width="15%" height="15%">
+    <br><br></div>
+  <div class="fundo5"><br><br></br><br><br><br><br><br><br><br><br><br><br><br></div>
+  <div class="fundo6">
+    <img src="https://media3.giphy.com/media/57Y7JIqvH9okJCJYjp/giphy.webp?cid=790b76112dfadac252eb31a25091b9a562710952aeb631ad&rid=giphy.webp" alt="">
+    <img src="https://media2.giphy.com/media/Mamp5FV1w8EsMFNuPS/giphy.webp?cid=790b761137e5539459c0b4a2f5be92736ab4e37f349f7bcc&rid=giphy.webp" alt="" width="400px" height="400px">
+    <img src="https://media3.giphy.com/media/57Y7JIqvH9okJCJYjp/giphy.webp?cid=790b76112dfadac252eb31a25091b9a562710952aeb631ad&rid=giphy.webp" alt="">
+  </div>
+  <div class="fundo7">
 </body>
 <table>
   <tr>
+    <img src="https://media3.giphy.com/media/57Y7JIqvH9okJCJYjp/giphy.webp?cid=790b76112dfadac252eb31a25091b9a562710952aeb631ad&rid=giphy.webp" alt="" class="star1">
+    <img src="https://media0.giphy.com/media/2A0jXrfittsR3Qae1U/giphy.webp?cid=790b7611171f52e3cff02f377b3bd460c407d05d2b6bc8be&rid=giphy.webp" alt="" class="star2">
+
     <td>
+      <img src="https://media3.giphy.com/media/57Y7JIqvH9okJCJYjp/giphy.webp?cid=790b76112dfadac252eb31a25091b9a562710952aeb631ad&rid=giphy.webp" alt="" class="star4">
+      <img src="images/fundo2.jpg" alt="" width="450" height="550" class="sylv">
       <img src="images/chapelzinho2.jpg" width="550" height="400" style="transform:rotate(90deg);" class="flora">
+      <img src="https://media3.giphy.com/media/57Y7JIqvH9okJCJYjp/giphy.webp?cid=790b76112dfadac252eb31a25091b9a562710952aeb631ad&rid=giphy.webp" alt="" class="star3">
     </td>
+      <img src="https://media3.giphy.com/media/57Y7JIqvH9okJCJYjp/giphy.webp?cid=790b76112dfadac252eb31a25091b9a562710952aeb631ad&rid=giphy.webp" alt="" class="star4">
   </tr>
 </table>
+</div>
 
 </html>
