--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   <br>
   <hr size=3 noshade><br><br>
   <center>
-    <font Color="cc0e74">
+    <font Color="#cc0e74">
       <h1>31/03</h1>
     </font>
 
     <img src="https://media0.giphy.com/media/SRO0ZwmImic0/giphy.gif?cid=790b761190a05cfb0ac93c0edbb9580526775cd96446915f&rid=giphy.gif" alt="gatogif" class="Gatos">
-  
+
   </center>
   <br>
   <hr size=3 noshade><br><br>
@@ -61,7 +61,7 @@
           <font color="#ce0f3d">Ela ama muito</font>
         </h2>
         <ul>
-          <font color="4d4646">
+          <font color="#4d4646">
             <li><strong>Gatos</strong>😻</li>
             <ul>
               <li>matilda</li>
